# embassy-gy-bmi160

./: CHANGELOG.md  Cargo.toml  README.md
examples/: simple_read.rs
src/: lib.rs  signals.rs
