[package]
edition = "2024"
name = "embassy-gy-bmi160"
version = "0.2.2"
authors = ["Jorge Andre Castro <georgeandrec@gmail.com>"]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Driver async no_std pour le capteur IMU BMI160, basé sur Embassy."
documentation = "https://docs.rs/embassy-gy-bmi160"
readme = "README.md"
keywords = [
    "embassy",
    "bmi160",
    "imu",
    "no-std",
    "embedded",
]
categories = [
    "embedded",
    "no-std",
    "hardware-support",
]
license = "GPL-2.0-or-later"
repository = "https://github.com/jorgeandrecastro/embassy-gy-bmi160"

[lib]
name = "embassy_gy_bmi160"
path = "src/lib.rs"

[dependencies.embassy-sync]
version = ">=0.4, <0.9"

[dependencies.embassy-time]
version = ">=0.3, <0.6" 

[dependencies.embedded-hal-async]
version = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true